Fixes small CSS bug when there are too much buttons on the planning admin header

--- a/client/stylesheets/planning.styl
+++ b/client/stylesheets/planning.styl
@@ -37,6 +37,7 @@
     line-height: 34px
 
 .schedule-wrapper
+  clear: both
   padding-right: 7px
   overflow: auto
   table
